--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,7 @@
     /* box-shadow: 0 2px 10px rgba(0,0,0,0.1); */
 }
 .encabezado img {
-    width: 90px;
+    width: 100px;
     border-radius: 10px;
     transition: transform 0.3s ease;
 }
@@ -257,5 +257,105 @@ ul {
     color: #666;
     line-height: 1.6;
 }
+
+
+
+.tienda-contenedor {
+    padding: 50px 5%;
+    background-color: #fff5e6; 
+}
+
+.titulo-tienda {
+    text-align: center;
+    color: #c67d39; 
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+
+.productos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+}
+
+/* Tarjeta de Producto */
+.producto-card {
+    width: 100%;
+    height: 250px;     
+    object-fit: cover; 
+    border-radius: 12px;
+    border: 2px solid #2d2926;
+    background-color: #f9f9f9;
+
+
+display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    border-radius: 15px;
+    border: 2px solid #2d2926;
+    height: 250px;
+}
+
+.producto-card:hover {
+transform: translateY(-8px) rotate(1deg); 
+    box-shadow: 10px 10px 0px #f6921e;
+}
+
+
+.producto-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover; 
+    border-radius: 15px;
+    border-bottom: 2px solid #f0f0f0;
+}
+
+.producto-card h3 {
+    margin: 15px 0 10px;
+    color: #2d2926;
+}
+
+.producto-card .precio {
+    font-weight: bold;
+    color: #f6921e; 
+    font-size: 1.4rem;
+    margin-bottom: 15px;
+}
+
+/* Botón de compra */
+.btn-comprar {
+    background-color: #ffcc00; 
+    border: 2px solid #2d2926;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.btn-comprar:hover {
+    background-color: #f6921e;
+    color: white;
+}
+
+
+.producto-card img {
+    width: 100%;
+    height: 250px;     
+    object-fit: cover; 
+    border-radius: 12px;
+    border: 2px solid #2d2926; 
+    background-color: #f9f9f9;
+}
+
+
+.producto-card:hover {
+    transform: translateY(-8px) rotate(1deg); 
+    box-shadow: 10px 10px 0px #f6921e; 
+}
+
 
 /*# sourceMappingURL=styles.css.map */
