--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,13 @@ gap: 20px;
 padding: 0;
 }
 
+.main-contacto {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+
 .wa {
     position: fixed;
     bottom: 20px;
@@ -229,7 +236,7 @@ margin: 0;
     margin-bottom: 50px;
 }
 
-/* Grilla de productos */
+
 .productos-grid {
     display: flex;
     flex-wrap: wrap; 
@@ -277,7 +284,7 @@ margin: 0;
 
 
 
-/* Contenedor Principal */
+
 .tienda-contenedor {
     padding: 50px 5%;
     background-color: #fff5e6; 
@@ -291,14 +298,14 @@ margin: 0;
     text-transform: uppercase;
 }
 
-/* Cuadrícula de productos */
+
 .productos-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 30px;
 }
 
-/* Tarjeta de Producto */
+
 .producto-card {
     background-color: white;
     border: 3px solid #2d2926; 
@@ -333,7 +340,7 @@ margin: 0;
     margin-bottom: 15px;
 }
 
-/* Botón de compra */
+
 .btn-comprar {
     background-color: #ffcc00;
     border: 2px solid #2d2926;
@@ -367,13 +374,14 @@ margin: 0;
 
 
 .contacto-seccion {
-    padding: 60px 10%;
+    padding: 60px 0;
     min-height: 60vh;
-    background-color: #fff5e6;
+    background-color: #F0EBE3;
     margin-bottom: 40px; 
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 80vh;
 }
 
 .contacto-contenedor {
@@ -384,6 +392,8 @@ margin: 0;
     border: 4px solid #2d2926;
     border-radius: 30px;
     box-shadow: 10px 10px 0px #c67d39; 
+    width: 100%;
+    max-width: 1500px;
 }
 
 
@@ -463,6 +473,80 @@ margin: 0;
     margin: 20px auto 0;
     border-radius: 50%;
     border: 5px solid #ffcc00;
+}
+
+
+
+.faq-seccion {
+    background-color: #F0EBE3; 
+    padding: 60px 10%;
+    min-height: 80vh;
+}
+
+.faq-contenedor {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.faq-titulo {
+    text-align: center;
+    color: #2d2926;
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+    text-shadow: 2px 2px 0px #ffcc00;
+}
+
+
+.faq-item {
+    background: white;
+    border: 3px solid #2d2926;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    box-shadow: 6px 6px 0px #c67d39;
+    transition: transform 0.2s;
+}
+
+.faq-item:hover {
+    transform: translate(-2px, -2px);
+    box-shadow: 8px 8px 0px #f6921e;
+}
+
+
+summary {
+    padding: 20px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    cursor: pointer;
+    list-style: none; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #2d2926;
+}
+
+summary::after {
+    content: '▼';
+    color: #f6921e;
+    transition: 0.3s;
+}
+
+
+.faq-item[open] summary::after {
+    transform: rotate(180deg);
+}
+
+.faq-item[open] summary {
+    background-color: #ffcc00; 
+    border-bottom: 3px solid #2d2926;
+}
+
+/* La respuesta */
+.faq-respuesta {
+    padding: 20px;
+    background-color: #fff;
+    line-height: 1.6;
+    color: #444;
 }
 
 
