--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+
 @use "variables";
+@use "header";
 @use "footer";
 @use "inicio";
-@use "tienda";
 @use "nosotros";
+@use "tienda";
 @use "contacto";
-@use "header";
+
+
 
 
 * {
@@ -15,16 +20,11 @@
 }
 
 body {
-    background-color: variables.$color-main-beige;
-}
-
-a {
-    text-decoration: none;
-    color: variables.$color-link;
-}
-
-ul {
-    list-style: none;
-    padding: 0; 
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     margin: 0;
+    padding: 0;
+    background-color: $crema;
+    font-family: 'Montserrat', sans-serif;
 }
