--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -1,6 +1,10 @@
+@use "variables";
+
+
+
 .nosotros-seccion {
     padding: 60px 10%;
-    background-color: $crema;
+    background-color: variables.$crema;
 
     .nosotros-contenido {
         @include caja-animal;
@@ -12,12 +16,12 @@
         img {
             width: 40%;
             border-radius: 20px;
-            border: 3px solid $oscuro;
+            border: 3px solid variables.$oscuro;
         }
 
         .texto {
             flex: 1;
-            h2 { color: $naranja; margin-bottom: 20px; }
+            h2 { color: variables.$naranja; margin-bottom: 20px; }
             p { line-height: 1.6; }
         }
     }
