--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 $naranja: #f6921e;
 $amarillo: #ffcc00;
 $oscuro: #2d2926;
@@ -6,8 +8,8 @@ $crema: #F0EBE3;
 $blanco: #ffffff;
 
 @mixin caja-estilo-animal { 
-    background: $blanco;
-    border: 4px solid $oscuro;
+    background: variables.$blanco;
+    border: 4px solid variables.$oscuro;
     border-radius: 30px;
-    box-shadow: 10px 10px 0px $madera;
+    box-shadow: 10px 10px 0px variables.$madera;
 }
