--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-
 @use "variables";
 @use "header";
 @use "footer";
@@ -10,6 +7,7 @@
 @use "contacto";
 
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 
 * {
@@ -25,6 +23,6 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: $crema;
+    background-color: variables.$crema;
     font-family: 'Montserrat', sans-serif;
 }
