--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -1,25 +1,43 @@
 @use "variables";
 
-
-
 .main-home {
     flex: 1;
     min-height: calc(100vh - 160px);
     background-color: variables.$crema;
     padding: 20px;
-
     .hero {
         text-align: center;
-        padding: 40px 20px;
-        h2 {
-            font-size: 3rem;
-            color: variables.$oscuro;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.2rem;
-            max-width: 800px;
-            margin: 0 auto;
-        }
+        padding: 40px;
+        h2 a { color: variables.$cafe; text-decoration: underline; }
     }
+}
+
+.img-princ { 
+    display: block;
+    margin: 0 auto;
+    width: 30%; 
+}
+
+.hero, .shop-invite {
+    text-align: center;
+    padding: 50px 20px;
+    background-color: variables.$fondo-claro; 
+    margin: 30px 0;
+    border-top: 2px solid variables.$naranja;
+    border-bottom: 2px solid variables.$naranja;
+    h1, h2 { color: variables.$naranja; font-size: 28px; margin-bottom: 10px; }
+    p { color: #555; font-size: 18px; margin-bottom: 25px; }
+}
+
+.btn-tienda {
+    background-color: variables.$naranja;
+    color: variables.$blanco;
+    padding: 15px 30px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 50px; 
+    font-size: 1.2rem;
+    transition: all 0.3s ease;
+    display: inline-block;
+    &:hover { transform: scale(1.05); }
 }
