--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -1,28 +1,21 @@
 @use "variables";
 
+.nosotros-container {
+    max-width: 1000px;
+    margin: 40px auto;
+    padding: 0 20px;
+    text-align: center;
+}
 
+.nosotros-hero h1 {
+    color: variables.$naranja;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
 
-.nosotros-seccion {
-    padding: 60px 10%;
-    background-color: variables.$crema;
-
-    .nosotros-contenido {
-        @include caja-animal;
-        padding: 40px;
-        display: flex;
-        align-items: center;
-        gap: 40px;
-
-        img {
-            width: 40%;
-            border-radius: 20px;
-            border: 3px solid variables.$oscuro;
-        }
-
-        .texto {
-            flex: 1;
-            h2 { color: variables.$naranja; margin-bottom: 20px; }
-            p { line-height: 1.6; }
-        }
-    }
+.intro-text {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 50px;
 }
