--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,23 +6,32 @@
 @use "tienda";
 @use "contacto";
 
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 0;
-    padding: 0;
     background-color: variables.$crema;
-    font-family: 'Montserrat', sans-serif;
+}
+
+a { text-decoration: none; color: variables.$cafe-texto; }
+li, ul { list-style: none; padding: 0; margin: 0; }
+
+.wa {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 65px;
+    z-index: 2000;
 }
