--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -41,3 +41,14 @@
     display: inline-block;
     &:hover { transform: scale(1.05); }
 }
+
+@media (max-width: 1024px) {
+    .img-princ { width: 50%; }
+    .hero h1 { font-size: 24px; }
+}
+
+
+@media (max-width: 480px) {
+    .img-princ { width: 85%; }
+    .hero { padding: 30px 10px; h1 { font-size: 20px; } }
+}
