--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @use "nosotros";
 @use "tienda";
 @use "contacto";
+@use "faq";
+
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
