--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -13,12 +13,12 @@
     text-align: center;
     color: variables.$naranja;
     font-size: 2.5rem;
-    margin: 10px 0; // Pegado arriba
+    margin: 10px 0; 
 }
 
 .intro-text {
     max-width: 800px;
-    margin: 0 auto 80px; // Mucho espacio abajo para despegar las tarjetas
+    margin: 0 auto 80px;
     text-align: center;
     font-size: 1.1rem;
     line-height: 1.6;
@@ -27,7 +27,6 @@
 
 .productos-grid {
     display: grid;
-    // Forzamos 3 columnas de 200px para que sean finas y estéticas
     grid-template-columns: repeat(3, 200px); 
     gap: 40px; 
     justify-content: center;
@@ -36,13 +35,13 @@
 
 .categoria-card {
     background-color: white;
-    border: 3px solid variables.$oscuro; // El borde negro que pediste
+    border: 3px solid variables.$oscuro;
     border-radius: 20px;
-    overflow: hidden; // Para que el naranja no se salga de las esquinas
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     box-shadow: 6px 6px 0px variables.$miel;
-    height: 280px; // Proporción vertical estética
+    height: 280px;
     transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
     &:hover {
@@ -79,7 +78,6 @@
     }
 }
 
-// EL 3-1: La cuarta tarjeta se clava en la columna 2 (el centro)
 .categoria-card:nth-child(4) {
     grid-column: 2;
     margin-top: 10px;
